--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>
-  Muslimbuilder | Homepage
+    Muslimbuilder | Homepage
   </title>
 </head>
 
